# Models_player

./: Cargo.toml  README.md  index.html
src/: main.rs  main_player.rs
src/main_player/: error.rs  wgpu_state.rs
src/main_player/resources/: camera.rs  instance.rs  light.rs  mod.rs  model.rs  shader.rs  texture.rs
src/main_player/resources/model/: draw_trait.rs  material.rs  mesh.rs  vertex.rs
src/requests/: binary.rs  error.rs  image.rs  mod.rs  text.rs
static/mtl/: Yueqin.mtl  cube.mtl  plane.mtl  skybox.mtl
static/shader/: bp.wgsl  pure.wgsl  skybox.wgsl
